[package]
name = "dredge"
version = "0.1.0"
edition = "2021"
description = "A fast, smart log analysis tool for the terminal"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
